--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   font-family: "Arial, sans-serif" !important;
 }
 
-.bar-graph-details {
+.pie-graph-details {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,25 +10,25 @@ body {
   padding: 40px 40px;
 }
 
-.bar-graph-details h2 {
+.pie-graph-details h2 {
   text-align: center;
   font-family: "Arial, sans-serif";
   max-width: 94%;
 }
 
-.bar-main-container {
+.pie-main-container {
   border-radius: 6px;
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #27764c;
 }
-.bar-graph-title h3 {
+.pie-graph-title h3 {
   font-weight: bolder;
   font-family: "Arial, sans-serif";
   padding-bottom: 20px;
   color: #c8c169;
 }
-.australian-bar-graph {
+.australian-pie-graph {
   font-weight: bolder;
   font-family: "Arial, sans-serif";
   color: #c8c169;
@@ -137,7 +137,7 @@ body {
   background-color: #27764c;
 }
 
-.hh {
+.image-avian {
   height: 100%;
 }
 
